--- a/setting.css
+++ b/setting.css
@@ -140,17 +140,27 @@ input:checked+.slider:before {
 }
 
 
-@media (min-width: 901px) {
-    .dafs>div {
+@media (min-width:431px) {
+
+    .dafs>div,
+    .small>div {
         width: 350px;
         margin: 20px;
     }
+
+    .small {
+        display: flex;
+        flex-direction: row;
+    }
+    #Information>h1{
+        margin-top: 46px;
+    }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 430px) {
     #Information {
         margin-left: 10px;
-        ;
+
     }
 
     textarea {
@@ -158,10 +168,15 @@ input:checked+.slider:before {
         height: 300px;
     }
 
-    .small {
+    .small>div {
         margin: 10px;
         margin-top: 20px;
 
+    }
+
+    .small {
+        display: flex;
+        flex-wrap: nowrap;
     }
 
     .dafs {
