--- a/setting.css
+++ b/setting.css
@@ -196,16 +196,31 @@ textarea {
 
 #Information>* {
     margin-bottom: 20px;
-    width: 260px;
+    width: 280px;
 }
 
 div.btn>* {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
     color: #000000;
 }
 
 button {
     border-radius: 50px;
     width: 60px;
+}
+
+#OnLine>li {
+    margin: 10px;
+    /* border-radius: 50px; */
+    /* background-color: #c5c5c5; */
+    border: 1px solid rgb(102, 102, 102);
+    border-top: 10px;
+    border-left: 10px;
+    cursor: pointer;
+}
+
+#OnLine {
+    margin-left: -25px;
+    margin-top: 40px;
 }
